some modifications and adding category to the routes, controllers, and models in the BE

--- a/src/app/components/updatepasswordform/updatepasswordform.component.html
+++ b/src/app/components/updatepasswordform/updatepasswordform.component.html
@@ -6,10 +6,10 @@
             <div class="mb-4 position-relative">
                 <input class="form-control " formControlName="password" [type]="isShown?'text':'password'"
                     placeholder="Password">
-                <button class="btn position-absolute bottom-0 top-0" style="right:0"
+                <a class="btn position-absolute bottom-0 top-0" style="right:0"
                     (click)="this.isShown =!this.isShown">
                     <fa-icon [icon]="isShown?faeye:faeyeslash"></fa-icon>
-                </button>
+                </a>
                 <div id="passwordHelp" class="form-text error-msg m-0"
                     *ngIf="resetPasswordForm.controls['password'].touched && resetPasswordForm.controls['password'].invalid">
                     <span *ngIf="resetPasswordForm.controls['password']?.errors?.['required']">
@@ -28,10 +28,10 @@
             <div class="mb-4 position-relative">
                 <input class="form-control " formControlName="confirmPassword"
                     [type]="isShown2?'text':'password'" placeholder="Confirm Password">
-                <button class="btn position-absolute bottom-0 top-0" style="right:0"
+                <a class="btn position-absolute bottom-0 top-0" style="right:0"
                     (click)="this.isShown2 =!this.isShown2">
                     <fa-icon [icon]="isShown2?faeye:faeyeslash"></fa-icon>
-                </button>
+                </a>
                 <div id="confirmPasswordwordHelp" class="form-text error-msg m-0"
                     *ngIf="resetPasswordForm.controls['confirmPassword'].touched && resetPasswordForm.controls['confirmPassword'].invalid">
                     <span *ngIf="resetPasswordForm.controls['confirmPassword']?.errors?.['required']">
