add Category has been done

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
         </a>
       </li>
       <li>
-        <a routerLinkActive="active" title="furniture"  [routerLink]="['products/addProduct']" class="nav-link px-1 text-white">
+        <a routerLinkActive="active" title="furniture"  [routerLink]="['products']" class="nav-link px-1 text-white">
           <fa-icon [icon]="homeIcon1" class="me-1"> </fa-icon>
           <fa-icon [icon]="homeIcon2"> </fa-icon>
         </a>
