--- a/src/app/modules/products/add-product/add-product.component.css
+++ b/src/app/modules/products/add-product/add-product.component.css
@@ -83,13 +83,15 @@ textarea {
     max-height: 150px;
 }
 
-#nameHelp {
+#errorIcon {
     position: absolute;
-    right: 9px;
+    right: 0;
     top: 0px;
     bottom: 0;
     color: red;
     font-size: 23px;
+    backdrop-filter: blur(3px);
+    padding: 0 6px;
 }
 
 .upload-area {
@@ -113,22 +115,51 @@ textarea {
     border-color: rgba(0, 0, 0, 0.757);
     color: rgb(3, 133, 180);
 }
-.list-group{
+
+.list-group {
     flex-direction: row;
     flex-wrap: wrap;
 }
+
 .list-group li {
     width: 20%;
 }
-.xIcon{
+
+.xIcon {
     position: absolute;
     top: 5px;
     right: 5px;
     font-size: 24px;
-    cursor:pointer;
+    cursor: pointer;
     color: #d7d7d7;
     text-shadow: 0px 0px 1px #000000b5;
 }
-.xIcon:hover{
+
+.xIcon:hover {
     background-color: red;
 }
+
+#imageHelp {
+    inset: 0;
+    display: flex;
+    align-items: center;
+    backdrop-filter: blur(3px);
+    justify-content: center;
+
+}
+
+#imageHelp #errorIcon {
+    position: relative;
+    font-size: 60px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    display: none;
+}
+
+#measure {
+    right: 0;
+    border-left: 1px solid rgba(0, 0, 0, 0.184)
+}
+
