--- a/src/app/modules/products/list-products-categories/list-products.component.html
+++ b/src/app/modules/products/list-products-categories/list-products.component.html
@@ -1,1 +1,128 @@
-<button (click)="NavigateToAddCategory()">Add Category</button>
+<div class="container py-5">
+    <div class="d-flex">
+
+        <div class="category-list me-5  rounded-3 overflow-hidden ">
+
+            <div class="categories overflow-y-scroll bg-light px-3 py-4">
+
+                <!--If there is no category to display then show this div-->
+                <div class="d-flex flex-column justify-content-center align-items-center position-relative"
+                    *ngIf="allCategories.length == 0">
+
+                    <img class="nodata" src="/assets/NoCategory.png">
+
+                    <h4 class="text-center msg mt-0 position-absolute">There is no categories to be displayed</h4>
+                </div>
+
+                <!---->
+                <div *ngIf="allCategories.length > 0">
+
+                    <h1 class="mb-3 fw-light">Categories</h1>
+
+                    <table class="table table-bordered table-striped rounded-2 overflow-hidden">
+                        <thead class="table-dark">
+                            <tr>
+                                <th>
+                                    Icon
+                                </th>
+                                <th>
+                                    Name
+                                </th>
+                                <th>
+    
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let category of allCategories">
+                                <td>
+                                    {{category.name}}
+                                </td>
+                                <td>
+                                    {{category.name}}
+                                </td>
+                                <td class="text-center">
+                                    <button class="btn btn-warning me-3">Edit</button>
+                                    <button class="btn btn-danger">Delete</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+            </div>
+
+            <button (click)="NavigateToAddCategory()" class="mt-2 btn btn-success w-100">Add Category</button>
+
+        </div>
+
+        <div class="product-list h-100">
+
+            <div class="products bg-light px-3 rounded-3 py-4">
+                <!--If there is no category to display then show this div-->
+                <div class="d-flex flex-column justify-content-center align-items-center position-relative"
+                    *ngIf="allPrds.length == 0">
+
+                    <img class="nodata" src="/assets/Product Not Found.png">
+
+                    <h4 class="text-center msg mt-0 position-absolute">There is no products to be displayed</h4>
+
+                </div>
+
+                <!---->
+                <div *ngIf="allPrds.length > 0">
+                    <h1 class="fw-light mb-3 ">Products</h1>
+                    <ul class="p-0">
+                        <li class="d-flex border-bottom" *ngFor="let product of allPrds">
+                            <div class="w-25">
+                                <div id="carouselExample" class="carousel slide">
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active position-relative"
+                                            *ngFor="let image of product.images; let isFirst = first"
+                                            [class.active]="isFirst">
+                                            <img [src]='getImageUrl(image)'>
+                                        </div>
+                                        <div *ngIf="product.offer.valueOf() > 0">
+                                            <span
+                                                class="position-absolute offer">{{product.offer.valueOf()*100}}%</span>
+                                        </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button"
+                                        data-bs-target="#carouselExample" data-bs-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button"
+                                        data-bs-target="#carouselExample" data-bs-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
+
+                            </div>
+                            <div>
+                                <h4>{{product.name}}</h4>
+                                <span>Category: </span>
+                                <br>
+                                <span>Price: {{product.price}} EGP</span>
+                                <br>
+                                <span>Quantity: {{product.quantity}} Piece</span>
+                                <ul class="list-unstyled d-flex mt-2">
+                                    <li class="me-1" *ngFor="let color of product.colors">
+                                        <span [style.background]="color" class="avail-colors"></span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+
+            <button (click)="NavigateToAddProduct()" class="mt-2 btn btn-success w-100">Add Product</button>
+
+
+        </div>
+
+    </div>
+</div>
