--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
-html , body{
+html,
+body {
     height: 100%;
 }
+
 :root {
     --mode: black;
     --fontcolor: white;
@@ -11,8 +13,8 @@ html , body{
 
 main {
     background-color: rgb(227, 225, 225);
-    width:100%;
-    
+    width: 100%;
+
 }
 
 img {
@@ -31,16 +33,70 @@ img {
     backdrop-filter: blur(4px);
 }
 
-.special-btn{
+.special-btn {
     background-color: rgba(0, 0, 0, 0.324);
-    color:#000000b3;
+    color: #000000b3;
     font-weight: 500;
     border-radius: 50px;
     padding: 5px 20px;
     text-transform: uppercase;
 }
 
-.special-btn:hover{
-    background-color:#087ea2cf;
-    color:black
+.special-btn:hover {
+    background-color: #087ea2cf;
+    color: black
+}
+
+.product-image {
+    width: 15%;
+    margin-right: 10px;
+    border-right: 1px solid #00000036;
+    padding: 0 8px;
+}
+
+.listItem {
+    border-radius: 6px;
+    position: relative;
+    display: flex;
+    padding: 16px 0px;
+    border: 1px solid rgba(0, 0, 0, 0.21);
+    margin: 5px;
+    backdrop-filter: blur(5px);
+    background: rgb(0 141 205 / 21%);
+}
+
+.deletebtn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: 24px;
+    cursor: pointer;
+    color: #d7d7d7;
+    text-shadow: 0px 0px 1px #000000b5;
+}
+
+.deletebtn:hover {
+    color: red
+}
+
+.colorItem {
+    position: relative;
+    height: 20%;
+    width: 100%;
+    margin-bottom: 10px
+}
+
+.deletebtnclr {
+    background: #ff000082;
+    position: absolute;
+    inset: 0px;
+    font-size: 24px;
+    cursor: pointer;
+    border: 0;
+    color: rgb(255 255 255);
+    visibility: hidden;
+}
+
+.colorItem:hover .deletebtnclr{
+    visibility: visible;
 }
