--- a/src/app/components/upload-area/upload-area.component.css
+++ b/src/app/components/upload-area/upload-area.component.css
@@ -1,25 +1,3 @@
-.addCategoryForm{
-    margin-top: 50px;
-    border: 1px solid rgba(0, 0, 0, 0.296);
-    box-shadow: 4px 5px 1px rgba(0, 0, 0, 0.237);
-    background-color: rgba(255, 255, 255, 0.687);
-    border-radius: 10px;
-}
-form label{
- margin: 0 10px;
- text-transform: capitalize;
-}
-
-#nameHelp {
-    position: absolute;
-    right: 9px;
-    top: 0px;
-    bottom: 0;
-    color: red;
-    font-size: 23px;
-}
-
-
 .upload-area {
     border: 2px dashed rgba(160, 160, 160, 0.534);
     border-radius: 10px;
@@ -40,4 +18,11 @@ form label{
 .upload-area:hover {
     border-color: rgba(0, 0, 0, 0.757);
     color: rgb(3, 133, 180);
+}
+
+.upload-list{
+    inset: 0;
+    left: 10px;
+    bottom: 10px;
+    overflow-y: scroll;
 }
