--- a/src/app/modules/products/add-category/add-category.component.html
+++ b/src/app/modules/products/add-category/add-category.component.html
@@ -1,29 +1,37 @@
 <div class="container addCategoryForm w-50">
     <div>
+
         <h1 class="fw-light mt-3 mb-3 border-bottom">Add New Category</h1>
+    
     </div>
     <div>
-        <form [formGroup]="addCategoryForm" class="px-5 py-3" (ngSubmit)="createCategory(addCategoryForm)">
+        <form [formGroup]="categoryForm" class="px-5 py-3" (ngSubmit)="createCategory()">
+                
                 <!--Name-->
                 <div class="mb-4 position-relative d-flex align-items-center w-100 ">
                     <label for="Name">Name</label>
                     <input class="form-control" type="text" id="Name" formControlName="name">
                     <div id="nameHelp" class="form-text error-msg m-0"
-                        *ngIf="addCategoryForm.controls['name'].touched && addCategoryForm.controls['name'].invalid">
+                        *ngIf="categoryForm.controls['name'].touched && categoryForm.controls['name'].invalid">
 
-                        <span *ngIf="addCategoryForm.controls['name']?.errors?.['required']">
+                        <span *ngIf="categoryForm.controls['name']?.errors?.['required']">
                             <fa-icon [icon]="errorIcon" title="Reqiured"></fa-icon>
                         </span>
 
                         <span
-                            *ngIf="addCategoryForm.controls['name']?.errors?.['maxlength'] || addCategoryForm.controls['name']?.errors?.['minlength'] ">
+                            *ngIf="categoryForm.controls['name']?.errors?.['maxlength'] || categoryForm.controls['name']?.errors?.['minlength'] ">
                             <fa-icon [icon]="errorIcon" title="It should be between 4 and 14"></fa-icon>
                         </span>
 
                     </div>
                 </div>
 
-            <button [disabled]="addCategoryForm.invalid" class="btn special-btn d-block m-auto">Add</button>
+                 <!--Image-->
+                 <div class="position-relative mb-3">
+                    <app-upload-area [isMultiple]="false" (newItemEvent)="addItem($event)"></app-upload-area>
+                 </div>
+
+            <button [disabled]="categoryForm.invalid" class="btn submit-btn d-block m-auto">Add</button>
         </form>
     </div>
 </div>
