--- a/src/app/modules/products/list-categories/list-categories.component.html
+++ b/src/app/modules/products/list-categories/list-categories.component.html
@@ -1,1 +1,61 @@
-<p>list-categories works!</p>
+<!-- <div class=" "> -->
+
+    <div class="categories bg-light">
+
+        <!--If there is no category to display then show this div-->
+        <div class="d-flex flex-column justify-content-center align-items-center position-relative"
+            *ngIf="allCategories.length == 0">
+
+            <img class="nodata" src="/assets/NoCategory.png">
+
+            <h4 class="text-center msg mt-0 position-absolute">There is no categories to be displayed</h4>
+        </div>
+
+        <!---->
+        <div class="h-100 overflow-hidden" *ngIf="allCategories.length > 0">
+
+            <h1 class="fw-light m-0 border-bottom text-center p-2 title">Categories</h1>
+
+            <div class="overflow-y-scroll h-100">
+                <table class="table table-bordered table-striped rounded-2 ">
+                    <thead class="table-dark">
+                        <tr>
+                            <th>
+                                Icon
+                            </th>
+                            <th>
+                                Name
+                            </th>
+                            <th>
+
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let category of allCategories">
+                            <td class="w-25 text-center">
+                                <img class="w-50" [src]='getImageUrl(category.image)'>
+                            </td>
+                            <td class="ctgry-name">
+                                {{category.name}}
+                            </td>
+                            <td class="align-middle text-center">
+                                <button class="btn dlt-btn me-3" (click)="DeleteCategory(category._id)">
+                                    <fa-icon [icon]="trashIcon"></fa-icon>
+                                </button>
+                                <button class="btn edt-btn">
+                                    <fa-icon [icon]="penIcon"></fa-icon>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
+
+    </div>
+
+    <button (click)="NavigateToAddCategory()" class="mt-2 btn add-btn w-100">Add Category</button>
+
+<!-- </div> -->
