--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+/* Collect All Shared Data */
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url('/src/app/modules/products/list-products-categories/list-products-categories.component.css');
 
 html,
 body {
@@ -22,18 +26,73 @@ img {
     height: 100%;
 }
 
-.sidebar {
-    height: 90vh;
-    /* Set initial height to occupy full viewport height */
-    overflow-y: auto;
-    /* Enable scrolling if sidebar content exceeds viewport height */
-    border-top: 0.5px solid rgb(98, 98, 98);
-    width: 280px;
-    background: #000000b8;
-    backdrop-filter: blur(4px);
+.btn {
+    border-radius: 50px;
+    background: #2196F3;
+    font-size: 18px;
+    color: white;
+    opacity: 0.3;
 }
 
-.special-btn {
+.btn:hover {
+    opacity: 1;
+}
+
+.dlt-btn {
+    background-color: tomato;
+}
+
+.edt-btn {
+    background-color: rgb(0, 199, 123);
+}
+
+.add-btn {
+    background-color: blue;
+    border-radius: 0
+}
+
+/*  */
+.colorItem {
+    position: relative;
+    height: 20%;
+    width: 100%;
+    margin-bottom: 10px
+}
+
+.deletebtnclr {
+    background: #ffffff3f;
+    position: absolute;
+    inset: 0px;
+    font-size: 24px;
+    cursor: pointer;
+    border: 0;
+    color: rgb(255 255 255);
+    visibility: hidden;
+}
+
+.colorItem:hover .deletebtnclr {
+    visibility: visible;
+}
+
+.uploaded-image {
+    width: 15%;
+    margin-right: 10px;
+    border-right: 1px solid #00000036;
+    padding: 0 8px;
+}
+
+.uploaded-image-data {
+    border-radius: 6px;
+    position: relative;
+    display: flex;
+    padding: 16px 0px;
+    border: 1px solid rgba(0, 0, 0, 0.21);
+    margin: 5px;
+    backdrop-filter: blur(5px);
+    background: rgb(200 214 225)
+}
+
+.submit-btn {
     background-color: rgba(0, 0, 0, 0.324);
     color: #000000b3;
     font-weight: 500;
@@ -42,27 +101,9 @@ img {
     text-transform: uppercase;
 }
 
-.special-btn:hover {
+.submit-btn:hover {
     background-color: #087ea2cf;
     color: black
-}
-
-.product-image {
-    width: 15%;
-    margin-right: 10px;
-    border-right: 1px solid #00000036;
-    padding: 0 8px;
-}
-
-.listItem {
-    border-radius: 6px;
-    position: relative;
-    display: flex;
-    padding: 16px 0px;
-    border: 1px solid rgba(0, 0, 0, 0.21);
-    margin: 5px;
-    backdrop-filter: blur(5px);
-    background: rgb(0 141 205 / 21%);
 }
 
 .deletebtn {
@@ -79,24 +120,13 @@ img {
     color: red
 }
 
-.colorItem {
-    position: relative;
-    height: 20%;
-    width: 100%;
-    margin-bottom: 10px
-}
 
-.deletebtnclr {
-    background: #ff000082;
-    position: absolute;
-    inset: 0px;
-    font-size: 24px;
-    cursor: pointer;
-    border: 0;
-    color: rgb(255 255 255);
-    visibility: hidden;
-}
+div::-webkit-scrollbar , div::-webkit-scrollbar-button{
+    background-color: rgba(191, 208, 221, 0.846);
+    /* border-radius: 0 20px 20px 0; */
 
-.colorItem:hover .deletebtnclr{
-    visibility: visible;
+}
+div::-webkit-scrollbar-thumb{
+    background-color: rgb(127, 140, 145);
+    border-radius: 100px;
 }
